--- a/CAMSGHB.CAMS.API/appsettings.json
+++ b/CAMSGHB.CAMS.API/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=207.148.69.13;Database=dbCams3;User ID=dbcams;Password=123456Ws"
+  }
 }
