--- a/CAMSGHB.CAMS.API/Properties/launchSettings.json
+++ b/CAMSGHB.CAMS.API/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "CAMSGHB_CAMS_API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "api/values",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
