Frombody_set_db

--- a/CAMSGHB.CAMS.API/appsettings.json
+++ b/CAMSGHB.CAMS.API/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=207.148.69.13;Database=dbCams3;User ID=dbcams;Password=123456Ws"
+    "Default": "Server=207.148.69.13;Database=dbCams3;User ID=os1;Password=os1"
   }
 }
