--- a/CAMSGHB.CAMS.API/appsettings.json
+++ b/CAMSGHB.CAMS.API/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=207.148.69.13;Database=dbCams3;User ID=os1;Password=os1"
+    "Default": "Server=35.189.173.218;Database=dbCams;User ID=sa;Password=g5pH25k2Q.fa"
   }
 }
