--- a/CAMSGHB.CAMS.API/appsettings.json
+++ b/CAMSGHB.CAMS.API/appsettings.json
@@ -6,6 +6,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=35.189.173.218;Database=dbCams;User ID=sa;Password=g5pH25k2Q.fa"
+    //"Default": "Server=35.189.173.218;Database=dbCams;User ID=sa;Password=g5pH25k2Q.fa",
+    "Default": "Server=207.148.69.13;Database=CAMS-TEST2;User ID=os1;Password=os1"
+
   }
 }
